.k8s/base/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    keel.sh/policy: force
    keel.sh/match-tag: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: web
        image: inko/course-mapper:latest
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /
            port: 8000
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          periodSeconds: 15
        volumeMounts:
        - mountPath: /home/node/app/public/resources
          name: web
          subPath: resources
        - mountPath: /home/node/app/public/pa
          name: web
          subPath: pa
        - mountPath: /home/node/app/public/img/courses
          name: web
          subPath: img/courses
        resources:
          requests:
            memory: 110Mi
            cpu: 100m
          limits:
            memory: 256Mi
            cpu: 1
      volumes:
      - name: web
        persistentVolumeClaim:
          claimName: web
